set(DYAD_PERF_SRC )
set(DYAD_PERF_PRIVATE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/dyad_perf.h)
set(DYAD_PERF_PUBLIC_HEADERS )

set(CALIPER_PERF_SRC ${CMAKE_CURRENT_SOURCE_DIR}/caliper_perf.cpp)
set(CALIPER_PERF_PRIVATE_HEADERS )
set(CALIPER_PERF_PUBLIC_HEADERS )

set(DEFAULT_PERF_SRC ${CMAKE_CURRENT_SOURCE_DIR}/dyad_perf.c)
set(DEFAULT_PERF_PRIVATE_HEADERS )
set(DEFAULT_PERF_PUBLIC_HEADERS )

if (DYAD_PROFILER STREQUAL "CALIPER")
    set(DYAD_PERF_SRC ${DYAD_PERF_SRC} ${CALIPER_PERF_SRC})
    set(DYAD_PERF_PRIVATE_HEADERS ${DYAD_PERF_PRIVATE_HEADERS} ${CALIPER_PERF_PRIVATE_HEADERS})
    set(DYAD_PERF_PUBLIC_HEADERS ${DYAD_PERF_PUBLIC_HEADERS} ${CALIPER_PERF_PUBLIC_HEADERS})
else ()
    set(DYAD_PERF_SRC ${DYAD_PERF_SRC} ${DEFAULT_PERF_SRC})
    set(DYAD_PERF_PRIVATE_HEADERS ${DYAD_PERF_PRIVATE_HEADERS} ${DEFAULT_PERF_PRIVATE_HEADERS})
    set(DYAD_PERF_PUBLIC_HEADERS ${DYAD_PERF_PUBLIC_HEADERS} ${DEFAULT_PERF_PUBLIC_HEADERS})
endif ()

add_library(${PROJECT_NAME}_perf SHARED ${DYAD_PERF_SRC})
target_link_libraries(${PROJECT_NAME}_perf PUBLIC flux::core flux::optparse)

if (DYAD_PROFILER STREQUAL "CALIPER")
    target_link_libraries(${PROJECT_NAME}_perf PUBLIC caliper)
    target_compile_definitions(${PROJECT_NAME}_perf PUBLIC WITH_CALIPER=1)
endif ()

install(
    TARGETS ${PROJECT_NAME}_perf
    EXPORT ${DYAD_EXPORTED_TARGETS}
    LIBRARY DESTINATION ${DYAD_INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${DYAD_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${DYAD_INSTALL_BIN_DIR}
)

if(NOT ${DYAD_PERF_PUBLIC_HEADERS} STREQUAL "")
    dyad_install_headers("${DYAD_PERF_PUBLIC_HEADERS}" ${CMAKE_CURRENT_SOURCE_DIR})
endif()